--- a/scss/partial/_Nav.scss
+++ b/scss/partial/_Nav.scss
@@ -13,8 +13,7 @@
 
 #dropdown_archives > li {
   box-shadow: none;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  @include padding (5px,5px,0,0);
 }
 
 #button {
@@ -29,22 +28,25 @@
   text-decoration: none;
 }
 
-
 /*RESPONSIVE*/
-@media screen and (max-width: 575px) { 
+
+/*only mobile*/
+@media screen and (max-width: 575px) {  
   .second_banniere, #sidebar {
     display: none;
   }
 }
 
-@media screen and (min-width: 576px) {
+
+/*for tablette or landscape min*/
+@media screen and (min-width: 576px) { 
   .first_banniere,
   #logo, .bi-house-door, .bi-calendar3-event, .bi-bicycle, .bi-images, .bi-archive {
     display: none;
   }
-
 }
 
+ /*for tablette and landscape*/
 @media screen and (min-width: 576px) and (max-width: 1023px) {
   #sidebar {
     display: none;
@@ -52,17 +54,15 @@
 
   #navbar_content {
     a:hover {
-      background: rgb(0, 0, 0);
-      color: yellow
+      @include bg_fcolor (#000, $yellow);
     }
   }
 
   #navbar_content { 
     justify-content: center;
     
-    
     .nav-item {
-      margin: $size_10;
+      margin: 10px;
       width: 17vw;  
       max-width: 130px;
       font-size: $size_15; 
@@ -82,23 +82,22 @@
   }
 
   #sidebar .list-unstyled a:hover {
-      background: rgb(0, 0, 0);
-      color: yellow
+    @include bg_fcolor (#000, $yellow);
+      
   }
 
   .menu_nav {
     background: rgb(187, 178, 178);
     border: $border_black_5;
-    margin-left: $size_10;
-    margin-bottom: $size_5;
-        
+    @include margin (0,0,10px,5px);
+    
     .container {
         height: 100%;
         text-align: center ;
     }
 
     li {
-        padding: $size_20;  
+        padding: 20px;  
     }
 
     .list-unstyled > li > a {
@@ -115,10 +114,11 @@
 
   .menu_footer {
     margin-top: 80px;
+
     .col {
       padding-bottom: 50px ;
     }
   }
-
 }
   
+/*FINI*/
