--- a/scss/partial/_titles.scss
+++ b/scss/partial/_titles.scss
@@ -1,15 +1,15 @@
-@import "Formules.scss";
+@import "_Set";
 
 h1 {
   font-size: 2.7rem;
   font-family: 'Gloria Hallelujah', cursive;
-  color: rgb(255, 255, 255);
-  @include align_weight;
+  color: $white;
+  @include alignC_weightB;
 }
 
 h2 { /*Card-header*/
   font-size: 1.4rem;
-  @include align_weight;
+  @include alignC_weightB;
 }
 
 .event_article h2 {
@@ -21,33 +21,33 @@ h3 { /*title statut of club*/
   font-size: 1.3rem;
   color: $sky_blue;
   font-style: oblique;
-  padding-top: 5px;
-  @include align_weight;
+  @include padding(5px,0,0,0);
+  @include alignC_weightB;
 }
 
 h5 { 
   font-size: 1.6rem;
-  @include align_weight;
+  @include alignC_weightB;
 }
 
-h6 { /*Card-title*/
-  @include align_weight;
-  background: $lgray;
+.card-title { /* h6 */
   box-shadow: -0em 0 .8em $orange;  
-  padding: 5px;
-  margin-bottom: 10px;
-  text-decoration: none; 
+  @include alignC_weightB;
+  @include backG_Ft_border_color($lgray,black,none);
+  @include padding(5px,5px,5px,5px);
+  @include margin(20px,20px,auto,auto);
 }
 
 /* PAGE EVENT Modal Title H5*/
-#join_modal_label {
+.event_description .modal-header {
+  @include backG_Ft_border_color(lighten(#000000, 10%), $white, none);
   font-family: 'Gloria Hallelujah', cursive;
-  color: black;
 }
 
 /*RESPONSIVE*/ 
 
-@media screen and (min-width: 576px) and (max-width: 1023px) { /* for tablette & landscape */ 
+/* for tablette & landscape */ 
+@media screen and (min-width: 576px) and (max-width: 1023px) { 
   
   /*GENERAL*/
   h1 {
@@ -67,32 +67,27 @@ h6 { /*Card-title*/
   }
 
   h6 { /*Card-title*/
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
-#join_modal_label {  /* Modal Title H5*/
-  text-decoration: none;
-}
-
-
-@media screen and (min-width: 1024px)  { /* for desktop */ 
+/* FOR DESKTOP */ 
+@media screen and (min-width: 1024px)  { 
   
   h1 {
     font-size: 5rem;
-    margin-top: -0.8vw;
+    @include margin(-0.8vw,0,0,0);
   }
 
   h2{
     font-size: 2.7rem;
   }
 
-  #sidebar h2 {
-    
+  #sidebar h2 { 
     font-size: 4.5rem;
-    margin-top: 30px;
-    padding-bottom: 50px;
     font-family: 'Gloria Hallelujah', cursive;
+    @include margin(30px,0,0,0);
+    @include padding(0,100px,0,0);
   }
 
   h3 {
@@ -101,7 +96,7 @@ h6 { /*Card-title*/
 
   h5 {
     font-size: 2.5rem;
-    padding-bottom: 10px;
+    @include padding(0,10px,0,0);
   }
 
   h6 {
@@ -110,4 +105,4 @@ h6 { /*Card-title*/
 }
 
 
-/*FINI*/
+/*Vérifié*/
