--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,12 @@
 @import "node_modules/bootstrap/scss/bootstrap";
-@import "partial/_Formules";
+@import "partial/_Set";
 @import "partial/_Nav";
 @import "partial/_Main";
 @import "partial/_Titles";
 @import "partial/_Buttons";
 @import "partial/_Footer";
+
+/*Settings Mobile First*/
 
 html, body {
   font-size: $size_10;
@@ -22,13 +24,17 @@ main {
 
 /*RESPONSIVE*/
 
-@media screen and (min-width: 576px) and (max-width: 1023px) { /* for tablette & landscape */ 
+ /* For Tablettes & Landscapes */ 
+
+ @media screen and (min-width: 576px) and (max-width: 1023px) {
   html, body {
     font-size: $size_13;
-  }
+  }  
 }
 
-@media screen and (min-width: 1024px){ /* for desktops */ 
+/* For Desktops */ 
+
+@media screen and (min-width: 1024px){ 
   html {
     background: rgb(0,0,0);
   }
@@ -38,11 +44,12 @@ main {
     @include mp-auto
   }
 
-  /*Parametrage CSS Grid */
+  /*Settings CSS Grid */
+
   #content {
     display: grid; 
     grid-template-columns: 250px 1fr;
-    grid-template-rows: 15vw 1fr 80px;
+    grid-template-rows: 15vw 1fr 150px;
     grid-template-areas: "head head"
                          "menu main"
                          "foot foot";
@@ -56,14 +63,23 @@ main {
     grid-area: menu;
   }
 
+  #content main {
+    grid-area: main;
+  }
+
   #content footer {
-    grid-area: foot;
+    grid-area: foot; 
   }
 }
 
-@media screen and (min-width: 2000px) { /*for desktops XL*/
+/*For Desktops XL*/
+
+@media screen and (min-width: 2000px) { 
   #content {
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 300px 1fr 100px;
+    grid-template-columns: 350px 1fr;
+    grid-template-rows: 300px 1fr 150px;
   }
 }
+
+
+/*Vérifié code et contenu*/
