--- a/Style/style.css
+++ b/Style/style.css
@@ -11221,8 +11221,11 @@ textarea.form-control-lg {
     background: #4d4d4d;
     box-shadow: 0 0.8em 0.6em black;
     color: white;
-    font-size: 23px;
-    transform: translate3d(45px, 110px, 0) !important;
+    margin-top: 10px;
+    margin-bottom: 0;
+    margin-left: 10px;
+    margin-right: auto;
+    font-size: 20px;
   }
 
   .menu_footer {
