--- a/Style/style.css
+++ b/Style/style.css
@@ -11135,14 +11135,14 @@ textarea.form-control-lg {
   text-decoration: none;
 }
 
-/*RESPONSIVE*/
-/*only mobile*/
+/* RESPONSIVE */
+/* only mobile */
 @media screen and (max-width: 575px) {
   .second_banniere, #sidebar {
     display: none;
   }
 }
-/*for tablette or landscape min*/
+/* for tablette or landscape min */
 @media screen and (min-width: 576px) {
   .first_banniere,
 #logo, .bi-house-door, .bi-calendar3-event, .bi-bicycle, .bi-images, .bi-archive {
@@ -11208,13 +11208,13 @@ textarea.form-control-lg {
     padding-left: 20px;
     padding-right: 20px;
     line-height: 60px;
+    font-size: 25px;
   }
-  .menu_nav .list-unstyled > li > a {
+  .menu_nav li > a {
     font-family: "Gloria Hallelujah", cursive;
     background: #4d4d4d;
     box-shadow: 0 0.8em 0.6em black;
     color: white;
-    font-size: 25px;
   }
   .menu_nav #dropdown_menu_archives {
     font-family: "Gloria Hallelujah", cursive;
@@ -11223,9 +11223,12 @@ textarea.form-control-lg {
     color: white;
     margin-top: 10px;
     margin-bottom: 0;
-    margin-left: 10px;
-    margin-right: auto;
+    margin-left: 20px;
+    margin-right: 0;
+  }
+  .menu_nav #dropdown_menu_archives a {
     font-size: 20px;
+    color: #ffffff;
   }
 
   .menu_footer {
@@ -11241,7 +11244,6 @@ textarea.form-control-lg {
     padding-right: 0;
   }
 }
-/*Validée*/
 /*Settings Mobile First*/
 /*GENERAL*/
 article {
@@ -11549,17 +11551,20 @@ section {
     font-size: 20px;
   }
 
-  /*HOME*/
+  /* HOME */
   .accueil section {
     margin: 50px;
   }
 
+  .general_information .card-text {
+    text-align: start;
+  }
   .general_information .adhésion {
     font-size: 20px;
   }
 
   .event_article img {
-    width: 50px;
+    width: 55px;
     height: 55px;
   }
   .event_article .card-header {
@@ -11572,12 +11577,12 @@ section {
     padding-right: 0;
   }
 
-  /*EVENT*/
+  /* EVENT */
   .event_description .card-text a {
     font-size: 17px;
   }
 
-  /*Modal*/
+  /* Modal */
   .event_description .modal-content {
     width: 100%;
     height: 600px;
