--- a/scss/partial/_Main.scss
+++ b/scss/partial/_Main.scss
@@ -28,6 +28,8 @@ section {
   .card-text {
     text-align: justify;
   }
+
+  
 }
 
 /*HOME*/
@@ -295,19 +297,25 @@ article {
     font-size: $size_20;
   }
 
-/*HOME*/ 
+/* HOME */ 
 
   .accueil section {
     margin: $size_10 * 5;
   }
 
-  .general_information .adhésion {
-    font-size: $size_20;
+  .general_information  {
+    .card-text{
+      text-align: start ;
+    }
+
+    .adhésion {
+      font-size: $size_20;
+    }
   }
 
   .event_article {
     img {
-      @include size(50px, 55px);
+      @include size(55px, 55px);
     }
 
     .card-header {
@@ -318,13 +326,13 @@ article {
     }
   }
 
-   /*EVENT*/
+   /* EVENT */
 
    .event_description .card-text a {
     font-size: $size_15 +2;
   }
 
-  /*Modal*/
+  /* Modal */
 
   .event_description .modal-content {
     @include size(100%, 600px);
