delete commit unnecessary with rebase

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import "node_modules/bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import "partial/_Set";
 @import "partial/_Nav";
 @import "partial/_Main";
