--- a/Style/style.css
+++ b/Style/style.css
@@ -4988,15 +4988,7 @@ textarea.form-control-lg {
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
-.list-group-item:first-child {
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
-}
-.list-group-item:last-child {
-  border-bottom-right-radius: inherit;
-  border-bottom-left-radius: inherit;
-}
-.list-group-item.disabled, .list-group-item:disabled {
+.list-group-item:disabled {
   color: #6c757d;
   pointer-events: none;
   background-color: #fff;
@@ -5006,9 +4998,6 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #0f64e4;
   border-color: #0f64e4;
-}
-.list-group-item + .list-group-item {
-  border-top-width: 0;
 }
 .list-group-item + .list-group-item.active {
   margin-top: -1px;
