--- a/Style/style.css
+++ b/Style/style.css
@@ -3459,11 +3459,8 @@ textarea.form-control-lg {
   padding: 0.5rem 0;
   margin: 0;
   font-size: 1rem;
-  color: #212529;
   text-align: left;
   list-style: none;
-  background-color: #fff;
-  background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
 }
@@ -11143,7 +11140,7 @@ textarea.form-control-lg {
 /* RESPONSIVE */
 /* only mobile */
 @media screen and (max-width: 575px) {
-  .second_banniere, #sidebar {
+  .second_banniere, .menu_nav {
     display: none;
   }
 }
@@ -11156,7 +11153,7 @@ textarea.form-control-lg {
 }
 /*for tablette and landscape*/
 @media screen and (min-width: 576px) and (max-width: 1023px) {
-  #sidebar {
+  .menu_nav {
     display: none;
   }
 
@@ -11189,13 +11186,8 @@ textarea.form-control-lg {
     display: none;
   }
 
-  #sidebar .list-unstyled a:hover {
-    background: #000;
-    color: #ffff00;
-    border-color: none;
-  }
-
   .menu_nav {
+    /*Sidebar menu*/
     background: #d3d3d3a8;
     border: 5px solid #000;
     margin-top: 0;
@@ -11207,6 +11199,11 @@ textarea.form-control-lg {
     height: 100%;
     text-align: center;
   }
+  .menu_nav .list-unstyled a:hover {
+    background: #000;
+    color: #ffff00;
+    border-color: none;
+  }
   .menu_nav .nav-item {
     padding-top: 40px;
     padding-bottom: 20px;
@@ -11215,7 +11212,7 @@ textarea.form-control-lg {
     line-height: 60px;
     font-size: 25px;
   }
-  .menu_nav li > a {
+  .menu_nav .nav-item a {
     font-family: "Gloria Hallelujah", cursive;
     background: #4d4d4d;
     box-shadow: 0 0.8em 0.6em black;
@@ -11231,14 +11228,11 @@ textarea.form-control-lg {
     margin-left: 10px;
     margin-right: auto;
     font-size: 20px;
-  }
-  .menu_nav #dropdown_menu_archives a {
-    font-size: 20px;
-    color: #ffffff;
+    min-width: 15rem;
   }
 
   .menu_footer {
-    margin-top: 80px;
+    margin-top: 150px;
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
@@ -11250,7 +11244,23 @@ textarea.form-control-lg {
     padding-right: 0;
   }
 }
-/*Settings Mobile First*/
+@media screen and (min-width: 2000px) {
+  #dropdown_menu_archives a {
+    min-width: 25rem;
+    text-align: center;
+  }
+
+  .menu_footer .row {
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .menu_footer .row .col img {
+    width: 150px;
+    height: 120px;
+  }
+}
+/*SETTINGS MOBILE FIRST*/
 /*GENERAL*/
 article {
   max-width: 500px;
@@ -11297,7 +11307,7 @@ section {
 
 .general_information .adhésion {
   text-decoration: underline;
-  color: red;
+  color: #ff0000;
   font-size: 13px;
 }
 
@@ -11463,7 +11473,6 @@ section {
 /*RESPONSIVE*/
 @media screen and (min-width: 576px) and (max-width: 1023px) {
   /* for tablette & landscape */
-  /*GENERAL*/
   article {
     max-width: 600px;
   }
@@ -11476,9 +11485,6 @@ section {
   .event_article img {
     width: 40px;
     height: 45px;
-  }
-  .event_article .card-header {
-    font-size: 30px;
   }
 
   /*EVENT*/
@@ -11517,7 +11523,7 @@ section {
   /*CONTACT*/
   .needs-validation {
     width: 400px;
-    height: 620px;
+    height: 650px;
   }
   .needs-validation div {
     padding-top: 10px;
@@ -11572,9 +11578,6 @@ section {
   .event_article img {
     width: 55px;
     height: 55px;
-  }
-  .event_article .card-header {
-    font-size: 30px;
   }
   .event_article .card-body {
     padding-top: 15px;
@@ -11664,8 +11667,12 @@ section {
   /*Form*/
   .needs-validation {
     font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
     width: 600px;
-    height: 700px;
+    height: 750px;
   }
   .needs-validation ::placeholder {
     font-size: 15px;
@@ -11701,6 +11708,19 @@ h2, .h2 {
   color: #fc8702;
   font-size: 20px;
 }
+.event_article h3, .event_article .h3 {
+  /*rencontre sportive*/
+  margin-left: auto;
+  margin-right: auto;
+  color: #ff0000;
+  font-size: 1.4rem;
+  font-style: italic;
+}
+
+.event_description .card-header {
+  /*title h2 first article on Event page*/
+  font-size: 1.7rem;
+}
 
 h3, .h3 {
   /*title statut of club*/
@@ -11715,14 +11735,13 @@ h3, .h3 {
   font-weight: bold;
 }
 
-h5, .h5 {
+h4, .h4 {
   font-size: 1.6rem;
   text-align: center;
   font-weight: bold;
 }
 
-.card-title {
-  /* h6 */
+.archives .card-title {
   box-shadow: 0em 0 0.8em #fc8702;
   text-align: center;
   font-weight: bold;
@@ -11739,7 +11758,7 @@ h5, .h5 {
   margin-right: auto;
 }
 
-/* PAGE EVENT Modal Title H5*/
+/* PAGE EVENT Modal Title */
 .event_description .modal-header {
   background: #1a1a1a;
   color: #ffffff;
@@ -11748,11 +11767,25 @@ h5, .h5 {
 }
 
 /*RESPONSIVE*/
-/* for tablette & landscape */
+/* FOR TABLET & LANDSCAPE*/
 @media screen and (min-width: 576px) and (max-width: 1023px) {
-  /*GENERAL*/
   h1, .h1 {
     font-size: 3.5rem;
+  }
+
+  .event_article h2, .event_article .h2 {
+    /* section Event on Home page*/
+    font-size: 2.5rem;
+  }
+  .event_article h3, .event_article .h3 {
+    /*rencontre sportive*/
+    font-size: 2rem;
+    font-style: italic;
+  }
+
+  .event_description .card-header {
+    /*title h2 first article on Event page*/
+    font-size: 2rem;
   }
 
   h2, .h2 {
@@ -11765,12 +11798,12 @@ h5, .h5 {
     font-size: 1.5rem;
   }
 
-  h5, .h5 {
+  h4, .h4 {
     /* EVENT PAGE*/
     font-size: 1.4rem;
   }
 
-  h6, .h6 {
+  .archives .card-title {
     /*Card-title*/
     font-size: 1.1rem;
   }
@@ -11785,12 +11818,26 @@ h5, .h5 {
     margin-right: 0;
   }
 
+  .event_article h2, .event_article .h2 {
+    /* title section event article on Home page*/
+    font-size: 3.5rem;
+  }
+  .event_article h3, .event_article .h3 {
+    /*rencontre sportive*/
+    font-size: 2.5rem;
+  }
+
+  .event_description .card-header {
+    /*title h2 first article on Event page*/
+    font-size: 3rem;
+  }
+
   h2, .h2 {
     font-size: 2.7rem;
   }
 
-  #sidebar h2, #sidebar .h2 {
-    font-size: 4.5rem;
+  #sidebar {
+    font-size: 5rem;
     font-family: "Gloria Hallelujah", cursive;
     margin-top: 30px;
     margin-bottom: 0;
@@ -11803,10 +11850,12 @@ h5, .h5 {
   }
 
   h3, .h3 {
+    /*title modal on event page & club statuts*/
     font-size: 2.6rem;
   }
 
-  h5, .h5 {
+  h4, .h4 {
+    /* two articles on event page */
     font-size: 2.5rem;
     padding-top: 0;
     padding-bottom: 10px;
@@ -11814,12 +11863,10 @@ h5, .h5 {
     padding-right: 0;
   }
 
-  h6, .h6 {
+  .archives .card-title {
     font-size: 2rem;
   }
 }
-/*Vérifié*/
-/*GROSSIR LES BOUTON CONTACTER en resp ordi */
 /*Event*/
 .event_description .card .btn {
   font-size: 10px;
@@ -12018,36 +12065,35 @@ main {
   }
 
   /*Settings CSS Grid */
-  #content {
+  .content {
     display: grid;
     grid-template-columns: 250px 1fr;
     grid-template-rows: 15vw 1fr 150px;
     grid-template-areas: "head head" "menu main" "foot foot";
   }
 
-  #content header {
+  .content header {
     grid-area: head;
   }
 
-  #content .menu_nav {
+  .content .menu_nav {
     grid-area: menu;
   }
 
-  #content main {
+  .content main {
     grid-area: main;
   }
 
-  #content footer {
+  .content footer {
     grid-area: foot;
   }
 }
 /*For Desktops XL*/
 @media screen and (min-width: 2000px) {
-  #content {
+  .content {
     grid-template-columns: 350px 1fr;
     grid-template-rows: 300px 1fr 150px;
   }
 }
-/*Vérifié code et contenu*/
 
 /*# sourceMappingURL=style.css.map */
