--- a/scss/partial/_titles.scss
+++ b/scss/partial/_titles.scss
@@ -12,10 +12,23 @@ h2 { /*Card-header*/
   @include alignC_weightB;
 }
 
-.event_article h2 {
-  color: $orange;
-  font-size: $size_20;
+.event_article {
+  h2 {
+    color: $orange;
+    font-size: $size_20;
+  }
+  
+  h3 { /*rencontre sportive*/
+    @include mp-auto;
+    color: $red;
+    font-size: 1.4rem;
+    font-style: italic;    
+  }
 }
+
+.event_description  .card-header { /*title h2 first article on Event page*/
+    font-size: 1.7rem;
+  }
 
 h3 { /*title statut of club*/
   font-size: 1.3rem;
@@ -25,12 +38,12 @@ h3 { /*title statut of club*/
   @include alignC_weightB;
 }
 
-h5 { 
+h4 { 
   font-size: 1.6rem;
   @include alignC_weightB;
 }
 
-.card-title { /* h6 */
+.archives .card-title { 
   box-shadow: -0em 0 .8em $orange;  
   @include alignC_weightB;
   @include backG_Ft_border_color($lgray,black,none);
@@ -38,71 +51,101 @@ h5 {
   @include margin(20px,20px,auto,auto);
 }
 
-/* PAGE EVENT Modal Title H5*/
+/* PAGE EVENT Modal Title */
 .event_description .modal-header {
   @include backG_Ft_border_color(lighten(#000000, 10%), $white, none);
   font-family: 'Gloria Hallelujah', cursive;
 }
 
+
 /*RESPONSIVE*/ 
 
-/* for tablette & landscape */ 
+/* FOR TABLET & LANDSCAPE*/ 
 @media screen and (min-width: 576px) and (max-width: 1023px) { 
   
-  /*GENERAL*/
   h1 {
     font-size: 3.5rem;
+  }
+
+  .event_article {
+    h2 {  /* section Event on Home page*/  
+      font-size: 2.5rem;
+    }
+  
+    h3 { /*rencontre sportive*/
+      font-size: 2rem;
+      font-style: italic;    
+    }
+  }
+
+  .event_description  .card-header { /*title h2 first article on Event page*/
+    font-size: 2rem;
   }
 
   h2 { /*Card-header*/
     font-size: 1.7rem;
   }
 
-  h3 { /*title statut of club*/
+  h3  { /*title statut of club*/
     font-size: 1.5rem;
   }
 
-  h5 { /* EVENT PAGE*/
+  h4 { /* EVENT PAGE*/
     font-size: 1.4rem;
   }
 
-  h6 { /*Card-title*/
+  .archives .card-title { /*Card-title*/
     font-size: 1.1rem;
   }
 }
 
 /* FOR DESKTOP */ 
-@media screen and (min-width: 1024px)  { 
-  
+@media screen and (min-width: 1024px) { 
   h1 {
     font-size: 5rem;
     @include margin(-0.8vw,0,0,0);
   }
 
-  h2{
+  .event_article {
+    h2 {  /* title section event article on Home page*/  
+      font-size: 3.5rem;
+    }
+  
+    h3 { /*rencontre sportive*/
+      font-size: 2.5rem;
+    }
+  }
+
+  .event_description  .card-header { /*title h2 first article on Event page*/
+    font-size: 3rem;
+  }
+
+  h2 {
     font-size: 2.7rem;
   }
 
-  #sidebar h2 { 
-    font-size: 4.5rem;
+  #sidebar { 
+    font-size: 5rem;
     font-family: 'Gloria Hallelujah', cursive;
     @include margin(30px,0,0,0);
     @include padding(0,100px,0,0);
   }
 
-  h3 {
+  h3  { /*title modal on event page & club statuts*/
     font-size: 2.6rem;
   }
 
-  h5 {
+  h4 { /* two articles on event page */
     font-size: 2.5rem;
     @include padding(0,10px,0,0);
   }
 
-  h6 {
+  .archives .card-title {
     font-size: 2rem;
   }
+
+
 }
 
 
-/*Vérifié*/
+
