--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,7 @@ main {
 
   /*Settings CSS Grid */
 
-  #content {
+  .content {
     display: grid; 
     grid-template-columns: 250px 1fr;
     grid-template-rows: 15vw 1fr 150px;
@@ -55,19 +55,19 @@ main {
                          "foot foot";
   }
 
-  #content header {
+  .content header {
     grid-area: head;
   }
 
-  #content .menu_nav {
+  .content .menu_nav {
     grid-area: menu;
   }
 
-  #content main {
+  .content main {
     grid-area: main;
   }
 
-  #content footer {
+  .content footer {
     grid-area: foot; 
   }
 }
@@ -75,11 +75,10 @@ main {
 /*For Desktops XL*/
 
 @media screen and (min-width: 2000px) { 
-  #content {
+  .content {
     grid-template-columns: 350px 1fr;
     grid-template-rows: 300px 1fr 150px;
   }
 }
 
 
-/*Vérifié code et contenu*/
