--- a/Style/style.css
+++ b/Style/style.css
@@ -11231,6 +11231,7 @@ textarea.form-control-lg {
   }
   .menu_nav .dropdown-menu {
     text-align: center;
+    --bs-dropdown-bg: none;
     border: none;
     transform: translate3d(20px, 110px, 0px) !important;
     /*!important afin de forcer le translate en dessous du "li archives" sinon il se positionne automatiquement au dessus.
@@ -11438,35 +11439,23 @@ section {
   margin-right: 10px;
 }
 
-#first_slideshow, #second_slideshow {
-  padding-top: 0;
+#sainte_suzanne_2011, #second_slideshow {
   padding-bottom: 10px;
-  padding-left: auto;
-  padding-right: auto;
-  border: 1px solid black;
-}
-#first_slideshow img, #second_slideshow img {
-  max-width: 330px;
-  max-height: 400px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-.carousel-item {
-  margin-bottom: 30px;
-  /*transition-delay: 5s;*/
-}
-
-.sr-only {
-  line-height: 20px;
-}
-
-.carousel-control-prev, .carousel-control-next {
+.carousel .carousel-control-prev, .carousel .carousel-control-next {
+  position: relative;
+  margin-top: 10px;
+  font-size: 10px;
+  color: #a71818;
+  width: 80px;
   opacity: 1;
-  color: #e90303;
-  align-items: flex-end;
+  transition: opacity 0.35s ease;
+  font-weight: bold;
+}
+
+#carousel_control {
   justify-content: center;
-  width: 70%;
 }
 
 /* ARCHIVES*/
@@ -11555,6 +11544,13 @@ section {
   /*progress bar*/
   .progress_bar > .progress {
     height: 20px;
+  }
+
+  /*PICTURES*/
+  .pictures img {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   /*CONTACT*/
@@ -11673,6 +11669,13 @@ section {
     font-size: 15px;
   }
 
+  /*PICTURES*/
+  .pictures img {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   /*CLUB*/
   .statuts_club li {
     max-width: 450px;
@@ -11706,10 +11709,6 @@ section {
     font-size: 13px;
     height: 85px;
   }
-
-  #condition_accept {
-    font-size: 15px;
-  }
 }
 h1, .h1 {
   font-size: 2.7rem;
@@ -11719,11 +11718,16 @@ h1, .h1 {
   font-weight: bold;
 }
 
+.accueil h2, .accueil .h2 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
 h2, .h2 {
   /*Card-header*/
-  font-family: "Pacifico", cursive;
+  font-family: "Caveat", cursive;
   font-size: 1.4rem;
   text-align: center;
+  font-weight: bold;
 }
 
 .event_article h2, .event_article .h2 {
