--- a/scss/partial/_Main.scss
+++ b/scss/partial/_Main.scss
@@ -147,33 +147,28 @@ section {
   @include margin(0, 0, 10px, 10px);
 }
 
-#first_slideshow, #second_slideshow {
-  @include padding(0, 10px, auto, auto);
-  border: 1px solid black;
-  img {
-    max-width: 330px;
-    max-height: 400px;
-    @include mp-auto;
-  }  
+#sainte_suzanne_2011, #second_slideshow {
+  padding-bottom: 10px;
 }
 
-.carousel-item {
-  margin-bottom: 30px;
-  /*transition-delay: 5s;*/
+.carousel {
+  .carousel-control-prev, .carousel-control-next {
+    position:relative ;
+    
+    margin-top: 10px;
+    font-size: 10px;
+    color: rgb(167, 24, 24);
+    width: 80px;
+    opacity: 1;
+    transition: opacity 0.35s ease;
+    font-weight: bold;
+  }
 }
 
-.sr-only{
-  line-height: 20px;
-}
-
-.carousel-control-prev, .carousel-control-next {
-  opacity: 1;
-  color: #e90303;
-  align-items: flex-end;
+#carousel_control {
   justify-content: center;
-  width: 70%;
-  
 }
+
 
 /* ARCHIVES*/
 
@@ -262,6 +257,16 @@ article {
 .progress_bar > .progress { 
     height: $size_20;
 }
+
+ /*PICTURES*/
+
+ .pictures {
+  img {
+    max-width: 700px;
+    @include mp-auto;
+  }
+}
+
 
 /*CONTACT*/
   .needs-validation {
@@ -371,7 +376,17 @@ article {
       font-size: $size_15;
   }
 
+  /*PICTURES*/
+
+.pictures {
+  img {
+    max-width: 700px;
+    @include mp-auto;
+  }
+}
+
   
+
   /*CLUB*/
   .statuts_club li {
     max-width: 450px;
@@ -402,10 +417,6 @@ article {
       font-size: $size_13;
       height: 85px;
     }
-  }
-
-  #condition_accept {
-    font-size: $size_15;
   }
 }
 
